menambahkan page untuk map view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Easy-Eat</string>
+    <string name="google_map_api_key">AIzaSyCNuAd_ICazu9toQtoZcl6I9xsp_y_6zio</string>
 </resources>
